Fixed button spacing for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 
 .btn {
     margin: 0.4rem 2rem;
-    width: 20rem;
+    width: 13rem;
 }
 
 footer {
@@ -85,6 +85,7 @@ footer {
 .fa {
     padding: 1rem;
     color: white;
+    margin: 0 1rem;
 }
 .fa:hover {
     opacity: 0.7;
